--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
   </head>
   <body>
     <h1>Hello Teddington</h1>
-    <footer>Built by Kate Lavender 🪻</footer>
+    <footer>
+      Coded by
+      <a href="https://github.com/Kate-Lav" target="blank">Kate Lavender</a> 🪻,
+      built on
+      <a href="https://github.com/Kate-Lav/Moody-weather-app" target="blank"
+        >GitHub</a
+      >
+      and hosted on
+      <a href="https://moody-weather-forecast.netlify.app/" target="blank"
+        >Netlify</a
+      >
+    </footer>
   </body>
 </html>
