Amended text in footer to be more accurate

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <footer>
       Coded by
       <a href="https://github.com/Kate-Lav" target="blank">Kate Lavender</a> 🪻,
-      built on
+      open-sourced on
       <a href="https://github.com/Kate-Lav/Moody-weather-app" target="blank"
         >GitHub</a
       >
