--- a/index.html
+++ b/index.html
@@ -6,7 +6,26 @@
     <title>Moody Weather App</title>
   </head>
   <body>
-    <h1>Hello Teddington</h1>
+    <header>
+        <form>
+            <input type="search" placeholder="Enter a city" required/> 
+            <input type="submit" value="search"/>
+
+        </form>
+
+    </header>
+    <main>
+        <div>
+    <h1>London</h1>
+    <p>
+        Tuesday 14.46, bright sunshine
+        <br/>
+        Humidity: 90%, Wind: 0 mph
+    </p>
+    </div>
+    <div>
+    ☀️ 33°C
+    </div>
     <footer>
       Coded by
       <a href="https://github.com/Kate-Lav" target="blank">Kate Lavender</a> 🪻,
@@ -16,8 +35,8 @@
       >
       and hosted on
       <a href="https://moody-weather-forecast.netlify.app/" target="blank"
-        >Netlify</a
-      >
+        >Netlify</a>
+      </main>
     </footer>
   </body>
 </html>
