--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="src/index.css "/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Pirata+One&family=Tangerine:wght@400;700&family=UnifrakturCook:wght@700&display=swap" rel="stylesheet">
     <title>Moody Weather App</title>
   </head>
   <body>
+    <div class="weather-app">
     <header>
         <form>
             <input type="search" placeholder="Enter a city" required/> 
@@ -38,5 +43,6 @@
         >Netlify</a>
       </main>
     </footer>
+    </div>
   </body>
 </html>
