--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           </div>
           <div class="weather-app-temperature-container">
             <div class="weather-app-temperature-icon">☀️</div>
-            <div class="weather-app-temperature-value">33</div>
+            <div class="weather-app-temperature-value" id="temperature">33</div>
             <div class="weather-app-temperature-unit">°C</div>
           </div>
         </div>
