--- a/index.html
+++ b/index.html
@@ -32,15 +32,16 @@
           <div>
             <h1 class="weather-app-city" id="city">London</h1>
             <p class="weather-app-details">
-              Tuesday 14.46, bright sunshine
+              <span id="time"></span>, <span id="conditions-description"></span>
               <br />
-              Humidity:<strong> 90%</strong>, Wind: <strong>3 mph</strong>
+              Humidity: <strong id="humidity"></strong>, Wind:
+              <strong id="wind-speed"></strong>
             </p>
           </div>
           <div class="weather-app-temperature-container">
             <div class="weather-app-temperature-icon">☀️</div>
-            <div class="weather-app-temperature-value" id="temperature">33</div>
-            <div class="weather-app-temperature-unit">°C</div>
+            <div class="weather-app-temperature-value" id="temperature"></div>
+            <div class="weather-app-temperature-unit">° C</div>
           </div>
         </div>
       </main>
