Updated to integrate API to get 5-day forecast

--- a/index.html
+++ b/index.html
@@ -45,7 +45,12 @@
           </div>
         </div>
         <div class="weather-forecast" id="forecast">
-        
+          <div class="weather-forecast-day">
+            <div class="weather-forecast-date">Tue</div>
+            <div class="weather-forecast-icon">☀️</div>
+            <div class="weather-forecast-temperatures">23° 16°</div>
+          </div>
+        </div>
       </main>
 
       <footer>
